// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> snapshotting should render correctly with a content 1`] = `
<h2
  className="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-h93ljk-MuiTypography-root"
>
  Lorem Ipsulum
</h2>
`;

exports[`<Heading /> snapshotting should render correctly without a content 1`] = `
<h2
  className="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-h93ljk-MuiTypography-root"
/>
`;
